--- a/MduiBlazor.Client/wwwroot/index.html
+++ b/MduiBlazor.Client/wwwroot/index.html
@@ -11,16 +11,15 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="_content/MduiBlazor/css/mdui.min.css" />
     <link rel="stylesheet" href="_content/MduiBlazor.Shared/css/site.css" />
+    <link rel="stylesheet" href="_content/MduiBlazor.Shared/MduiBlazor.Shared.bundle.scp.css" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
-    <script>
-        function HighlightCode(code) {
-            if (typeof hljs != "undefined" && hljs != null && code != null) {
-                res = hljs.highlightAuto(code);
-            }
-            return res.value ?? "";
-        }
-    </script>
+
+    <!-- highlight -->
+    <link rel="stylesheet" title="light" href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/styles/vs.min.css">
+    <link rel="stylesheet" title="dark" disabled="disabled" href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/styles/vs2015.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlightjs-copy@1.0.3/dist/highlightjs-copy.min.css">
+
 </head>
 
 <body>
@@ -70,6 +69,16 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <!-- highlight -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/highlight.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/highlightjs-cshtml-razor@2.1.1/dist/cshtml-razor.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/highlightjs-copy@1.0.3/dist/highlightjs-copy.min.js"></script>
+    <script>
+        if (hljs != null) {
+            hljs.addPlugin(new CopyButtonPlugin());
+        }
+    </script>
 </body>
 
 </html>
