--- a/MduiBlazor.Client/wwwroot/index.html
+++ b/MduiBlazor.Client/wwwroot/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="referrer" content="no-referrer" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>MduiBlazor.Client</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MduiBlazor</title>
     <base href="/mdui-blazor/" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="css/app.css" />
@@ -16,8 +16,10 @@
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 
     <!-- highlight -->
-    <link rel="stylesheet" title="light" href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/styles/vs.min.css">
-    <link rel="stylesheet" title="dark" disabled="disabled" href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/styles/vs2015.min.css">
+    <link rel="stylesheet" title="light"
+        href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/styles/vs.min.css">
+    <link rel="stylesheet" title="dark" disabled="disabled"
+        href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/styles/vs2015.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlightjs-copy@1.0.3/dist/highlightjs-copy.min.css">
 
 </head>
@@ -71,9 +73,12 @@
     <script src="_framework/blazor.webassembly.js"></script>
 
     <!-- highlight -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/highlight.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/highlightjs-cshtml-razor@2.1.1/dist/cshtml-razor.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/highlightjs-copy@1.0.3/dist/highlightjs-copy.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/highlight.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/highlightjs-cshtml-razor@2.1.1/dist/cshtml-razor.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/highlightjs-copy@1.0.3/dist/highlightjs-copy.min.js"></script>
     <script>
         if (hljs != null) {
             hljs.addPlugin(new CopyButtonPlugin());
