--- a/MduiBlazor.Client/wwwroot/index.html
+++ b/MduiBlazor.Client/wwwroot/index.html
@@ -83,6 +83,13 @@
         if (hljs != null) {
             hljs.addPlugin(new CopyButtonPlugin());
         }
+
+        function HighlightCode(code) {
+            if (typeof hljs != "undefined" && hljs != null && code != null) {
+                res = hljs.highlightAuto(code);
+            }
+            return res.value ?? "";
+        }
     </script>
 </body>
 
