--- a/MduiBlazor.Client/wwwroot/index.html
+++ b/MduiBlazor.Client/wwwroot/index.html
@@ -16,10 +16,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 
     <!-- highlight -->
-    <link rel="stylesheet" title="light"
-        href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/styles/vs.min.css">
-    <link rel="stylesheet" title="dark" disabled="disabled"
-        href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/styles/vs2015.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/styles/vs.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlightjs-copy@1.0.3/dist/highlightjs-copy.min.css">
 
 </head>
