--- a/MduiBlazor.Client/wwwroot/index.html
+++ b/MduiBlazor.Client/wwwroot/index.html
@@ -16,8 +16,8 @@
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 
     <!-- highlight -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/styles/vs.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlightjs-copy@1.0.3/dist/highlightjs-copy.min.css">
+    <link rel="stylesheet" href="_content/MduiBlazor.Shared/highlight/css/vs.min.css">
+    <link rel="stylesheet" href="_content/MduiBlazor.Shared/highlight/css/highlightjs-copy.min.css">
 
 </head>
 
@@ -71,11 +71,11 @@
 
     <!-- highlight -->
     <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@highlightjs/cdn-assets@11.6.0/highlight.min.js"></script>
+            src="_content/MduiBlazor.Shared/highlight/js/highlight.min.js"></script>
     <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/highlightjs-cshtml-razor@2.1.1/dist/cshtml-razor.min.js"></script>
+            src="_content/MduiBlazor.Shared/highlight/js/cshtml-razor.min.js"></script>
     <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/highlightjs-copy@1.0.3/dist/highlightjs-copy.min.js"></script>
+            src="_content/MduiBlazor.Shared/highlight/js/highlightjs-copy.min.js"></script>
     <script>
         if (hljs != null) {
             hljs.addPlugin(new CopyButtonPlugin());
